# CAOS_PINNLAB

./: CHANGELOG.md  README.md  pyproject.toml  requirements-gpu.txt
data/: README.md
data-pipeline/: build_allencahn_ladder.py  build_estimates.py  build_evolution_frames.py  build_helmholtz_ladder.py  build_hidden_velocity_validation.py  build_identifiability_sweep.py  build_ladder.py  build_naive_lane.py  build_navier_centerlines.py  build_soilheat_validation.py  build_standard_comparisons.py  build_training_dynamics.py  localize_equations.py  rebuild_index.py  requirements.txt
docs/: README.md
frontend/: copy-data.mjs  index.html  package-lock.json  package.json  vite.config.ts
models/: bench-allencahn-naive.onnx  bench-allencahn.onnx  bench-burgers1d.onnx  bench-darcy-conformal.onnx  bench-darcy-operator.onnx  bench-darcy-pino.onnx  bench-darcy-superres.onnx  bench-heat1d.onnx  bench-navier-cavity.onnx  bench-poisson2d.onnx  bench-wave1d.onnx  ctrl-zero-source.onnx  dyn-double-pendulum.onnx  dyn-pendulum-hnn.onnx  env-aquifer-test.onnx  env-soil-heat-real.onnx  ind-heat2d-inverse-naive.onnx  ind-heat2d-inverse.onnx  ind-helmholtz-naive.onnx  ind-helmholtz.onnx  ind-hidden-velocity.onnx  mine-comminution-pbe.onnx  mine-flotation-kinetics.onnx  mine-heap-leach-rt.onnx  mine-thickener-settling.onnx  poll-ocean-transport.onnx  poll-soil-barrier-naive.onnx  poll-soil-barrier.onnx  poll-source-uq-bpinn.onnx  poll-tailings-seepage.onnx
scripts/: check_artifacts.py  precompute.ps1  precompute.sh
tests/: conftest.py  test_contract.py  test_dynamics_artifacts.py  (+3 more)
(+434 files in other folders)
